force-app/main/default/objects/ObligationConfiguration__c/ObligationConfiguration__c.object-meta.xml
<CustomObject>
    <description>This object is the key object for storing all the Obligation data in Salesforce. This acts as the parent to store the criteria for each obligation</description>
    <label>Obligation Configuration</label>
    <nameField>
        <displayFormat>ON-{0000}</displayFormat>
        <label>Obligation Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Obligation Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>