force-app/main/default/objects/ObligationConfiguration__c/fields/CriteriaLogic__c.field-meta.xml
<CustomField>
    <fullName>CriteriaLogic__c</fullName>
    <description>This field will store the custom logic in the form of AND-OR logic for all the criteria linked to each obligation</description>
    <label>Criteria Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>