force-app/main/default/objects/ObligationConfiguration__c/fields/ObligationCategory__c.field-meta.xml
<CustomField>
    <fullName>ObligationCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store the obligation category information. This will be a lookup to Obligation Category object</description>
    <label>Obligation Category</label>
    <referenceTo>ObligationCategory__c</referenceTo>
    <relationshipName>Obligations</relationshipName>
    <type>Lookup</type>
</CustomField>