force-app/main/default/objects/ObligationConfiguration__c/fields/ObligationName__c.field-meta.xml
<CustomField>
    <fullName>ObligationName__c</fullName>
    <description>This field will store the Obligation name for each obligation</description>
    <label>Obligation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>